Fix no-card achievement icon size on mobile

--- a/src/scss/components/achievement.scss
+++ b/src/scss/components/achievement.scss
@@ -217,6 +217,11 @@
         width: 100px;
         height: 100px;
         margin-right: 5px;
+
+        @media (max-width: breakpoints.$large-mobile) {
+            width: 80px;
+            height: 80px;
+        }
     }
 
     @media (max-width: breakpoints.$tablet) {
